# LinAlgLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test_compile_error.cpp
examples/: examples.cpp
include/: CMakeLists.txt  TinyLA.h  TinyLA_ET.h  linalg.h
tests/: CMakeLists.txt  test_main.cpp
